syntax = "proto2";

package protobuf;

option java_package = "edu.snu.onyx.runtime.executor.grpc";

import "common_message.proto";

message DataTransferControlMessage {
    required string controlMessageSourceId = 1;
    optional PartitionStore partitionStore = 2;
    required PartitionTransferType type = 3;
    required int32 transferId = 4;
    required bool encodePartialPartition = 5;
    required string partitionId = 6;
    required string runtimeEdgeId = 7;
    optional int32 startRangeInclusive = 8;
    optional int32 endRangeExclusive = 9;
}
enum PartitionTransferType {
    PUSH = 0;
    PULL = 1;
}

message RequestPartition {
    required string partitionId = 1;
    required PartitionStore partitionStore = 2;
    required string runtimeEdgeId = 3;
    optional int32 hashRangeStartVal = 4; // Inclusive
    optional int32 hashRangeEndVal = 5; // Exclusive
}
enum PartitionStore {
    MEMORY = 0;
    SER_MEMORY = 1;
    LOCAL_FILE = 2;
    REMOTE_FILE = 3;
}


